GNOME Bugzilla – Bug 707688
matroskademux: leaking buffer and caps when parsing attachments
Last modified: 2013-09-18 16:52:01 UTC
Created attachment 254349 [details] [review] Patch GstSample doesn't take ownership of either buffer or caps
Pushed, thanks: commit a5ceab82dd8658bf2e81aff95891962340eef6be Author: Matej Knopp <matej.knopp@gmail.com> Date: Sat Sep 7 16:37:03 2013 +0200 matroskademux: fix leaking buffer and caps https://bugzilla.gnome.org/show_bug.cgi?id=707688