matroskademux: fix leaking buffer and caps

https://bugzilla.gnome.org/show_bug.cgi?id=707688